fixed application model in ui

--- a/Chalkable.Web/assets/sass/partials/main/_buttons.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_buttons.scss
@@ -188,7 +188,7 @@ button.disabled, button[disabled]{
   &.upper-case{
     >SPAN{
       >SPAN{
-        >BUTTON{
+        >BUTTON, >A{
           text-transform: uppercase;
         }
       }
