--- a/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_install.scss
+++ b/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_install.scss
@@ -20,6 +20,25 @@
 
     &.quick-app-install{
 
+      .x-window-header{
+        border-bottom: 1px solid #d7d7d7;
+        padding-bottom: 15px;
+        margin-left: 0px;
+        margin-right: 12px;
+      }
+      .transaction-result-view{
+        text-align: center;
+        .transaction-success-view{
+          .desciption{
+            font-weight: bold;
+          }
+          .text{
+            background-position-x: 160px;
+            height: 30px;
+          }
+        }
+      }
+
       .app-screenshots-panel{
         .carousel-wrapper{
           width: auto;
