--- a/Chalkable.Web/assets/sass/partials/main/funds/_base_funds.scss
+++ b/Chalkable.Web/assets/sass/partials/main/funds/_base_funds.scss
@@ -97,7 +97,7 @@ BODY {
                       .method-container{
                       }
 
-                      .funds-transaction-result-view{
+                      .transaction-result-view.funds-transaction-result-view{
                         border-bottom: 1px solid #d7d7d7;
                         border-top: 1px solid #d7d7d7;
                         padding: 45px 0px 30px 0px;
@@ -106,30 +106,9 @@ BODY {
                         margin-top: 30px;
 
                         .text{
-                          font-size: 18px;
-                          font-weight: bold;
-                          text-shadow: 1px 1px 0 white;
                           padding: 2px 0px;
                         }
-                        .redirect-link{
-                          margin-top: 30px;
-                          cursor: pointer;
-                          color: #336a82;
-                          text-decoration: underline;
-                        }
-                        .transaction-success-view{
-                          .text{
-                            color: green;
-                            background: url('images/funds/success-icon.png') 45px 0px no-repeat;
 
-                          }
-                        }
-                        .transaction-fail-view{
-                          .text{
-                            color: red;
-                            background: url("images/funds/unsuccess-icon.png") 45px 0px no-repeat;
-                          }
-                        }
                       }
 
                       .funds-payment-form{
@@ -328,6 +307,33 @@ BODY {
         }
       }
     }
+  }
+}
+
+.transaction-result-view{
+  .text{
+    font-size: 18px;
+    font-weight: bold;
+    text-shadow: 1px 1px 0 white;
+  }
+  .transaction-success-view{
+    .text{
+      color: green;
+      background: url('images/funds/success-icon.png') 45px 0px no-repeat;
+
+    }
+  }
+  .transaction-fail-view{
+    .text{
+      color: red;
+      background: url("images/funds/unsuccess-icon.png") 45px 0px no-repeat;
+    }
+  }
+  .redirect-link{
+    margin-top: 30px;
+    cursor: pointer;
+    color: #336a82;
+    text-decoration: underline;
   }
 }
 
