--- a/Chalkable.Web/assets/jade/activities/grading/ShortGradingClassStandardsGridItems.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/ShortGradingClassStandardsGridItems.jade
@@ -31,7 +31,10 @@ mixin TeacherClassStandardsGridSummaryCell(info, ableEdit)
         +LeftRightToolbar()(
             style="width:" + self.getTbWidth() + "px",
             itemClass='grade-container',
-            fixedElementMargin=true
+            fixedElementMargin=true,
+            fixedElementWidth=false,
+            rightPadding=-1,
+            elWidth=117
         ).grid-toolbar.i-b.big-arrows
             each gradingItem in self.getGradingItemsOrdered()
                 -var stId = gradingItem.getStandard().getStandardId().valueOf()
