fixed for CHLK-3412 [55931] When user tries to write a review or rate an App, when they click on the stars, the screen scrolls back up to the top of the page

--- a/Chalkable.Web/assets/sass/partials/main/apps/_market_pages.scss
+++ b/Chalkable.Web/assets/sass/partials/main/apps/_market_pages.scss
@@ -27,7 +27,15 @@
 
 }
 
+.reviews .rating > input{
+  position: static;
+  top: 0;
+  display: none;
+}
+
 .app-market, .my-apps, .app-market-details, .apps-funds{
+
+
   .buttons-toolbar{
     .toolbar-btn{
       padding: 0 7px;
