--- a/Chalkable.Web/assets/jade/activities/profile/SchedulingMonthPage.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/SchedulingMonthPage.jade
@@ -6,7 +6,7 @@ schedule = self.getUser()
         .profile-info.scheduling-view
             .summary-info
                 +ShortPersonInfoSection(schedule, 64)
-                    label= 'Currently enrolled in ' + schedule.getClassesNumber() + ' classes'
+                    label= 'Currently' + ( self.getUser().getRole() && self.getUser().getRole().getId() == chlk.models.common.RoleEnum.TEACHER ? 'teaching' : 'enrolled in ' ) + schedule.getClassesNumber() + ' classes'
         actions = {currentAction: 'monthSchedule', day: 'daySchedule', week: 'weekSchedule', month: 'monthSchedule'}
         .calendar-section
             +Calendar(self, chlk.templates.calendar.announcement.MonthCalendarBodyTpl, self.getCalendar(), self.getControllerName(), actions, [schedule.getId()])
