--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -1,5 +1,5 @@
 //TODO refactor
-mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adminRecipients, userRole, classScheduleDateRanges)
+mixin BaseAnnouncementFormContainer(tplData, announcement, classId, adminRecipientId, adminRecipients, userRole, classScheduleDateRanges)
     +Hidden('id', announcement.getId().valueOf())
     +Hidden('announcementtypeid', announcement.getAnnouncementTypeId())#announcement-type-id
     +Hidden('statetyped', announcement.getStateTyped())
@@ -15,7 +15,7 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
 
     //+AnnouncementFormDescriptionBlock(announcement)
     typesEnum = chlk.models.announcement.AnnouncementTypeEnum
-    isAdminAnnouncement = adminRecipients && self.getUserRole().isAdmin()
+    isAdminAnnouncement = adminRecipients && tplData.getUserRole().isAdmin()
     isAnnouncement = (announcement.isStandartAnnouncement() || isAdminAnnouncement)
     disableDeleteBtn = !!(announcement.getGradingStudentsCount() && announcement.getGradingStudentsCount() > 0)
     standards = announcement.getStandards() || []
@@ -128,3 +128,24 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
                     =Msg.Delete
         else
             +ActionLink('announcement', 'discard').grey-link.not-blue.add-loader-btn=Msg.Discard
+
+    if announcement.getStandards() && announcement.getStandards().length > 0
+        .suggested-apps-block
+            .separator-line
+            .title Suggested Apps
+            .suggested-apps-conteiner
+                each app in announcement.getSuggestedApps()
+                    div.app-icon-link
+                        if app.needToInstall()
+                            +ActionLink('appmarket', 'tryToQuickInstall', app.getId(), announcement.getClassId(), announcement.getId()).app-link
+                                .app-list-item
+                                    div(data-tooltip='').icon
+                                        pictureUrl = tplData.getAppPictureURL(app.getBigPictureId(), 170, 110)
+                                        img(src=pictureUrl)
+                        else
+                            +ActionLink('apps', 'tryToAttach', announcement.getId(), app.getId().valueOf()).app-link
+                                .app-list-item
+                                    div(data-tooltip='Attach').attach-icon
+                                    .icon
+                                        pictureUrl = tplData.getAppPictureURL(app.getBigPictureId(), 170, 110)
+                                        img(src=pictureUrl)
