--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -24,83 +24,84 @@ mixin BaseAnnouncementFormContainer(tplData, announcement, classId, adminRecipie
         div(class=announcement.getExpiresDate() ? 'with-date' : '').title-block-container
             +RenderWith(announcement.getTitleModel(), chlk.templates.announcement.AnnouncementTitleTpl)
         needStandardsBlock = standards.length > 0 || (!isAdminAnnouncement && announcement.isCanAddStandard())
-        .left-block(class=needStandardsBlock ? 'with-standards' : '')
-            if isAdminAnnouncement
-                .buttons-container
-                    rolesEnum = chlk.models.common.RoleEnum
-                    buttons = ['Student', 'Teacher', 'Parent', 'Admin']
-                    each button in buttons
-                        roleName = button.toUpperCase();
-                        roleId = rolesEnum[roleName] ? rolesEnum[roleName].valueOf() : null
-                        text = Msg[button](true).toLowerCase().capitalize()
-                        Button(
-                            type="button",
-                            data-roleId = roleId,
-                            data-id = roleId ? '0|' + roleId + '|-1|-1' : adminRecipientId,
-                            disabled = roleId == rolesEnum.PARENT.valueOf()
-                            class = button.toLowerCase() + '-button',
-                            value = roleId ? "All " + text : text
-                        ).admin-gray.new-input=text
-                .recipient-part
-                    +RenderWith(adminRecipients, chlk.templates.announcement.AdminRecipients)
-            .left-block-container
-                +TextArea(name="content", placeholder=isAnnouncement ? "Message" : "Assignment")= announcement.getContent()
-                if needStandardsBlock
-                    .add-standards-container
-                        .add-standards
-                            .standards-list
-                                each standard in standards
-                                    BUTTON(data-tooltip = standard.getDescription()).grey-button.same-on-hover
-                                        = standard.getName()
-                                        if announcement.isAbleToRemoveStandard()
-                                            +ActionLink('announcement', 'removeStandard', announcement.getId(), standard.getStandardId()).remove-standard
-                            if !isAdminAnnouncement && announcement.isCanAddStandard()
-                                .title=Msg.Click_to_add_standard
-                                +ActionLink('announcement', 'showStandards', announcement.getAnnouncementTypeName(), announcement.getId(), classId).add-standards-btn.x-hidden
-                .drawer-icon
-            .drop-down-container.chat-bubble.top.x-hidden
-            input(type="submit",id="list-last-button",value="listLast", name="submitType", class='x-hidden validate-skip')
-            if !announcement.getState()
-                input(type="submit",id="save-form-button",value="saveNoUpdate", name="submitType", class='x-hidden validate-skip')
-        .right-block
-            .date-picker-container
-                label(for="expiresdate") Due Date
-                +DatePicker('expiresdate', announcement.getExpiresDate())(
-                    data-options={
-                        showOtherMonths: true,
-                        selectOtherMonths: true,
-                        dateRanges: classScheduleDateRanges
-                    },
-                    data-value=announcement.getExpiresDate() ? announcement.getExpiresDate().format('mm/dd/yy') : ''
-                    placeholder=Msg.Due_date,
-                    class='validate[required]'
-                )#expiresdate
-                .calendar-mark ?
-            if !isAdminAnnouncement
-                .max-score-container
-                    label(for="ann-max-score") Max Score
-                    input#ann-max-score(type="text", name="maxscore", placeholder=Msg.Max_score + ' 100', class="validate[custom[number],min[0]]", value=announcement.isGradable() ? announcement.getMaxScore() : '0')
-                    .question-mark(data-tooltip=Msg.Max_Score_Tooltip_Message) ?
-                .advanced-options
-                    A.advanced-options-btn(href="javascript:;")= Msg.Advanced_options
-                    .separator.x-hidden
-                    .advanced-options-container.x-hidden.chat-bubble.top
-                        .weight-multiplier.new-input-container
-                            label(for="ann-weightmultiplier")= Msg.Weight_Multiplier
-                            input#ann-weightmultiplier(type="text", name='weightmultiplier', class="validate[required,custom[double],min[0]]", placeholder="1.00", value=announcement.getWeightMultiplier() || 1.00)
-                            .question-mark(data-tooltip=Msg.Weight_Multiplier_Tooltip_Message) ?
-                        .weight-addition.new-input-container
-                            label(for="ann-weightaddition")=Msg.Weight_Addition
-                            input#ann-weightaddition(type="text", name='weightaddition', class="validate[required,custom[double],min[0]]", placeholder="0.00", value=announcement.getWeightAddition() || 0.00)
-                            .question-mark(data-tooltip=Msg.Weight_Addition_Tooltip_Message) ?
-                        .check-box-container
-                            label(for="ann-hidefromstudents")=Msg.Hide_from_Students
-                            +SlideCheckbox('hidefromstudents', announcement.isHiddenFromStudents(), false)
-                            .question-mark(data-tooltip=Msg.Hide_From_Student_Tooltip_Message) ?
-                        .check-box-container
-                            label(for="ann-candropstudentscore")=Msg.Can_drop_student_score
-                            +SlideCheckbox('candropstudentscore', announcement.isAbleDropStudentScore(), false)
-                            .question-mark(data-tooltip=Msg.Can_Drop_Student_Score_Tooltip_Message) ?
+        .table
+            .left-block(class=needStandardsBlock ? 'with-standards' : '')
+                if isAdminAnnouncement
+                    .buttons-container
+                        rolesEnum = chlk.models.common.RoleEnum
+                        buttons = ['Student', 'Teacher', 'Parent', 'Admin']
+                        each button in buttons
+                            roleName = button.toUpperCase();
+                            roleId = rolesEnum[roleName] ? rolesEnum[roleName].valueOf() : null
+                            text = Msg[button](true).toLowerCase().capitalize()
+                            Button(
+                                type="button",
+                                data-roleId = roleId,
+                                data-id = roleId ? '0|' + roleId + '|-1|-1' : adminRecipientId,
+                                disabled = roleId == rolesEnum.PARENT.valueOf()
+                                class = button.toLowerCase() + '-button',
+                                value = roleId ? "All " + text : text
+                            ).admin-gray.new-input=text
+                    .recipient-part
+                        +RenderWith(adminRecipients, chlk.templates.announcement.AdminRecipients)
+                .left-block-container
+                    +TextArea(name="content", placeholder=isAnnouncement ? "Message" : "Assignment")= announcement.getContent()
+                    if needStandardsBlock
+                        .add-standards-container
+                            .add-standards
+                                .standards-list
+                                    each standard in standards
+                                        BUTTON(data-tooltip = standard.getDescription()).grey-button.same-on-hover
+                                            = standard.getName()
+                                            if announcement.isAbleToRemoveStandard()
+                                                +ActionLink('announcement', 'removeStandard', announcement.getId(), standard.getStandardId()).remove-standard
+                                if !isAdminAnnouncement && announcement.isCanAddStandard()
+                                    .title=Msg.Click_to_add_standard
+                                    +ActionLink('announcement', 'showStandards', announcement.getAnnouncementTypeName(), announcement.getId(), classId).add-standards-btn.x-hidden
+                    .drawer-icon
+                .drop-down-container.chat-bubble.top.x-hidden
+                input(type="submit",id="list-last-button",value="listLast", name="submitType", class='x-hidden validate-skip')
+                if !announcement.getState()
+                    input(type="submit",id="save-form-button",value="saveNoUpdate", name="submitType", class='x-hidden validate-skip')
+            .right-block
+                .date-picker-container
+                    label(for="expiresdate") Due Date
+                    +DatePicker('expiresdate', announcement.getExpiresDate())(
+                        data-options={
+                            showOtherMonths: true,
+                            selectOtherMonths: true,
+                            dateRanges: classScheduleDateRanges
+                        },
+                        data-value=announcement.getExpiresDate() ? announcement.getExpiresDate().format('mm/dd/yy') : ''
+                        placeholder=Msg.Due_date,
+                        class='validate[required]'
+                    )#expiresdate
+                    .calendar-mark ?
+                if !isAdminAnnouncement
+                    .max-score-container
+                        label(for="ann-max-score") Max Score
+                        input#ann-max-score(type="text", name="maxscore", placeholder=Msg.Max_score + ' 100', class="validate[custom[number],min[0]]", value=announcement.isGradable() ? announcement.getMaxScore() : '0')
+                        .question-mark(data-tooltip=Msg.Max_Score_Tooltip_Message) ?
+                    .advanced-options
+                        A.advanced-options-btn(href="javascript:;")= Msg.Advanced_options
+                        .separator.x-hidden
+                        .advanced-options-container.x-hidden.chat-bubble.top
+                            .weight-multiplier.new-input-container
+                                label(for="ann-weightmultiplier")= Msg.Weight_Multiplier
+                                input#ann-weightmultiplier(type="text", name='weightmultiplier', class="validate[required,custom[double],min[0]]", placeholder="1.00", value=announcement.getWeightMultiplier() || 1.00)
+                                .question-mark(data-tooltip=Msg.Weight_Multiplier_Tooltip_Message) ?
+                            .weight-addition.new-input-container
+                                label(for="ann-weightaddition")=Msg.Weight_Addition
+                                input#ann-weightaddition(type="text", name='weightaddition', class="validate[required,custom[double],min[0]]", placeholder="0.00", value=announcement.getWeightAddition() || 0.00)
+                                .question-mark(data-tooltip=Msg.Weight_Addition_Tooltip_Message) ?
+                            .check-box-container
+                                label(for="ann-hidefromstudents")=Msg.Hide_from_Students
+                                +SlideCheckbox('hidefromstudents', announcement.isHiddenFromStudents(), false)
+                                .question-mark(data-tooltip=Msg.Hide_From_Student_Tooltip_Message) ?
+                            .check-box-container
+                                label(for="ann-candropstudentscore")=Msg.Can_drop_student_score
+                                +SlideCheckbox('candropstudentscore', announcement.isAbleDropStudentScore(), false)
+                                .question-mark(data-tooltip=Msg.Can_Drop_Student_Score_Tooltip_Message) ?
 
     .attachments-and-applications
         ann = announcement
