--- a/Chalkable.Web/assets/sass2/4_pages/_class-disciplines-page.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_class-disciplines-page.sass
@@ -29,7 +29,35 @@
       width: 100%
       height: 100px
 
-  .labeled-checkbox label
-    overflow: hidden
-    text-overflow: ellipsis
-    white-space: nowrap
+  .discipline-types
+    margin-right: 50%
+
+  .labeled-checkbox
+    label
+      overflow: hidden
+      text-overflow: ellipsis
+      white-space: nowrap
+
+    width: 40%
+
+    &:nth-child(2n - 1)
+      margin-right: 5%
+
+
+  .saving-block, .saved-block
+    display: none
+    font: bold 12px Arial
+    color: #5d5d5d
+    margin-top: 35px
+
+
+  .saved-block
+    background: url(images/discipline/saved.png) 0 center no-repeat
+    padding-left: 25px
+
+
+  .saving .saving-block
+    display: block
+
+  .saved .saved-block
+    display: block
