fixed to seating chart

--- a/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPage.jade
@@ -92,7 +92,7 @@ div(class=showButtons ? 'can-post' : '').page-content.people-list-container
         .people-list
             .black-arrow.no-class-scheduled.row Selected class is not scaduled in current Term
 typesEnum = chlk.models.attendance.AttendanceTypeEnum
-.chlk-pop-up-container.popup-top.seating-chart-popup
+.chlk-pop-up-container.popup-top.seating-chart-popup.chat-bubble.top
     .pop-up-triangle.big
     .first-part
         div(data-type=typesEnum.PRESENT.valueOf()).item.present.selected
