--- a/Chalkable.Web/assets/sass2/3_molecules/_lr-toolbar.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_lr-toolbar.sass
@@ -1,4 +1,5 @@
 .lr-toolbar
+  position: relative
   .first-container
     white-space: nowrap
     overflow: hidden
@@ -13,3 +14,25 @@
 
       .third-container
         display: table
+
+  .arrow
+    position: absolute
+    width: 10px
+    height: 17px
+    background-position: 0 0
+    background-repeat: no-repeat
+    top: 50%
+    margin-top: -9px
+    cursor: pointer
+
+    &.disabled
+      opacity: 0.5
+      cursor: default
+
+  .next-button
+    right: -21px
+    background-image: image-url("images2/common/classesbar-arrow-right.png")
+
+  .prev-button
+    left: -21px
+    background-image: image-url("images2/common/classesbar-arrow-left.png")
