--- a/Chalkable.Web/assets/jade/activities/profile/SchedulingPage.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/SchedulingPage.jade
@@ -6,7 +6,7 @@ schedule = self.getUser()
         .profile-info.scheduling-view
             .summary-info
                 +ShortPersonInfoSection(schedule, 64)
-                    label= 'Currently' + ( self.getUser().getRole() && self.getUser().getRole().getId() == chlk.models.common.RoleEnum.TEACHER ? 'teaching' : 'enrolled in ' ) + schedule.getClassesNumber() + ' classes'
+                    label=self.getPersonEnrollmentStatus(self.getUser(), schedule.getClassesNumber())
         actions = {currentAction: 'daySchedule'}
         if self.getControllerName() == 'students'
             -actions.day= 'daySchedule';
