updated Prifile Now page

--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -20,6 +20,7 @@
     <link href='https://fonts.googleapis.com/css?family=Reenie+Beanie' rel='stylesheet' type='text/css' />
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css' />
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css' />
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <!-- Whole Site CSS -->
     <link href="@Url.StaticContent("/Content/" + ViewData[ViewConstants.ROLE_NAME] + ".css")" rel="stylesheet" media="screen, projection" type="text/css" />
 @if (isDemoSchool || isDeveloperSchool)
