--- a/Chalkable.Web/assets/jade/activities/profile/SchoolPersonProfileSummaryView.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/SchoolPersonProfileSummaryView.jade
@@ -1,14 +1,13 @@
 user = self.getUser()
-.loader-container
-    .loader
+.profile-page
     +UserProfileTopBar(self, 'details')
     .summary-view
         #top-summary-panel
-            #avatar-photo-conainer
+            #avatar-photo-conainer.left-block.panel-block
                 .img-container
-                    +PersonImg(user, 256, true)
+                    +PersonImg(user, 140, true)
                     .grades-container
-            #student-info-panel
+            #student-info-panel.right-block.panel-block
                 displayName =user.getDisplayName() || user.getFullName()
                 h1.display-name(data-tooltip=displayName, data-tooltip-type="overflow")=displayName
                 .status=self.getStatusText()
