--- a/Chalkable.Web/assets/sass2/2_atoms/_avatar-wrapper.sass
+++ b/Chalkable.Web/assets/sass2/2_atoms/_avatar-wrapper.sass
@@ -7,8 +7,8 @@
     background: image-url("images/icons/alerts-white.png") 0 0 no-repeat
     width: 38px
     height: 37px
-    right: -19px
-    top: -17px
+    right: 0
+    top: 0
     position: absolute
     z-index: 1000
 
@@ -19,7 +19,7 @@
     right: -13px
     top: -12px
 
-@each $size in 40, 47, 55, 64, 70, 128
+@each $size in 40, 47, 55, 64, 70, 128, 140
   .person-avatar-m-#{$size}, .person-avatar-w-#{$size}
     height: $size * 1px
     width:  $size * 1px
