--- a/Chalkable.Web/assets/sass2/_shared.sass
+++ b/Chalkable.Web/assets/sass2/_shared.sass
@@ -40,6 +40,7 @@
 @import "3_molecules/lr-toolbar"
 @import "3_molecules/grading-items"
 @import "3_molecules/chart"
+@import "3_molecules/glance-box"
 
 @import "6_popups/list-new-popup"
 
