--- a/Chalkable.Web/assets/sass2/student.sass
+++ b/Chalkable.Web/assets/sass2/student.sass
@@ -10,3 +10,4 @@
 @import "4_pages/app-market-details"
 @import "4_pages/students-list"
 @import "4_pages/message-list-page"
+@import "4_pages/profile-page"
