--- a/Chalkable.Web/assets/jade/activities/class/ClassInfo.jade
+++ b/Chalkable.Web/assets/jade/activities/class/ClassInfo.jade
@@ -1,17 +1,19 @@
 sectionsInfo  = self.prepareDetailedInfo()
 classInfo = self.getClassInfo()
-.class-info.class-profile.loader-container
-    .loader
+.profile-page
+    h2.page-title=Msg.Class_profile
+
     +ProfileTopBar(self, 'info')
     .info-view
-        .top-panel
-            h1.info.with-line
-                .class-icon-container
-                    +ClassImg(classInfo, 45, 80)
-                span.className(data-tooltip=classInfo.getFullClassName())=classInfo.getName()
-            h2
-                div
-        .detail-info
+        #top-panel
+            #avatar-photo-conainer.left-block.panel-block
+                .class-image
+                    .img-container
+                        +ClassImg(classInfo, 92, 164)
+            #info-panel.central-block.panel-block
+                h1.display-name(data-tooltip=classInfo.getFullClassName(), data-tooltip-type="overflow")=classInfo.getName()
+        .close-open-control.detail-info
+            h3=' '
             each item in sectionsInfo
                 .section
                     .title=item.title
