--- a/Chalkable.Web/assets/jade/activities/profile/school-person-info-page.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/school-person-info-page.jade
@@ -1,5 +1,5 @@
-.teacher-info.info-page.view-mode.loader-container
-    .loader
+.profile-page.view-mode
+    h2.page-title=Msg.Profile
     +UserProfileTopBar(self, 'info')
     +ProfileInfoView(self.getUser())
         //todo rewrite this
