--- a/Chalkable.Web/assets/jade/activities/profile/SchedulingPage.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/SchedulingPage.jade
@@ -7,10 +7,6 @@ schedule = self.getUser()
             .summary-info
                 +ShortPersonInfoSection(schedule, 64)
                     label=self.getPersonEnrollmentStatus(self.getUser(), schedule.getClassesNumber())
-        actions = {currentAction: 'daySchedule'}
-        if self.getControllerName() == 'students'
-            -actions.day= 'daySchedule';
-            -actions.week= 'weekSchedule';
-            -actions.month= 'monthSchedule';
+        calendarData = self.getProfileScheduleTplParams(self.getUser(), self.getCurrentAction())
         .calendar-section
-            +Calendar(self, chlk.templates.calendar.announcement.DayCalendarBodyTpl, self.calendar, self.getControllerName(), actions, [schedule.getId()])
+            +Calendar(self, self.bodyTpl, self.calendar, calendarData.controllerName, calendarData.actions, [schedule.getId()])
