--- a/Chalkable.Web/assets/jade/activities/profile/SchedulingPage.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/SchedulingPage.jade
@@ -6,11 +6,7 @@ schedule = self.getUser()
         .profile-info.scheduling-view
             .summary-info
                 +ShortPersonInfoSection(schedule, 64)
-                    label= 'Currently' + ( self.getUser().getRole() && self.getUser().getRole().getId() == chlk.models.common.RoleEnum.TEACHER ? 'teaching' : 'enrolled in ' ) + schedule.getClassesNumber() + ' classes'
-        actions = {currentAction: 'daySchedule'}
-        if self.getControllerName() == 'students'
-            -actions.day= 'daySchedule';
-            -actions.week= 'weekSchedule';
-            -actions.month= 'monthSchedule';
+                    label=self.getPersonEnrollmentStatus(self.getUser(), schedule.getClassesNumber())
+        calendarData = self.getProfileScheduleTplParams(self.getUser(), self.getCurrentAction())
         .calendar-section
-            +Calendar(self, chlk.templates.calendar.announcement.DayCalendarBodyTpl, self.calendar, self.getControllerName(), actions, [schedule.getId()])
+            +Calendar(self, self.bodyTpl, self.calendar, calendarData.controllerName, calendarData.actions, [schedule.getId()])
