--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
@@ -50,8 +50,9 @@ mixin AnnouncementTypeToolBar(types, announcement, typeId)
                 if announcement.getState()
                     .duplicate-btn-container
                         +ActionButton('announcement', 'showDuplicateForm', announcement.getId(), topData.getSelectedItemId()).special-button.blue-button.submit-btn=Msg.Duplicate.toUpperCase()
-                if announcement.getStandards() && announcement.getStandards().length > 0
-                    +RenderWith(self.prepareSuggestedAppListData(), chlk.templates.apps.SuggestedAppsListTpl)
+                .suggested-apps
+                    if announcement.getStandards() && announcement.getStandards().length > 0
+                        +RenderWith(self.prepareSuggestedAppListData(), chlk.templates.apps.SuggestedAppsListTpl)
             .choose-type(class=(classId && !typeId && !state && types.length ? '' : 'x-hidden'))
             if !classId
                 if topItems.length
