--- a/Chalkable.Web/assets/jade/activities/announcement/AddMathStandards.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AddMathStandards.jade
@@ -20,5 +20,5 @@
                         .standards-description
         .buttons-container
             +Button.special-button2.cancel.close Cancel
-            +Button()(type="submit", disabled).special-button2.blue.add.add-standard-btn Submit
+            +Button()(type="submit", disabled).special-button2.blue-button.add.add-standard-btn Submit
 
