--- a/Chalkable.Web/assets/sass2/4_pages/_seating-chart-page.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_seating-chart-page.sass
@@ -105,10 +105,13 @@
   left: 0
   right: 0
   border-top: 1px solid #c8c7c3
-  z-index: 899
+  z-index: 299
 
   .student-block
     display: inline-block
     margin: 15px 10px 25px
     vertical-align: top
     height: 70px
+
+  &.demo
+    bottom: 72px
