--- a/Chalkable.Web/assets/sass2/4_pages/_grading-grid.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_grading-grid.sass
@@ -343,6 +343,9 @@
     BUTTON
       width: 68px
 
+  .lr-toolbar .prev-button
+    left: -21px - 234px
+
 .student-avg-popup-dialog
   width: 472px
   top: 80px
