--- a/Chalkable.Web/assets/sass2/3_molecules/_dialog.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_dialog.sass
@@ -1,4 +1,4 @@
-.dialog, .dialog-window
+.dialog, .dialog-window, .base-attachment-dialog
   position: fixed
   z-index: 1005
   background: #fff
@@ -49,6 +49,33 @@
         margin-right: 10px
 
 
+.base-attachment-dialog .iframe-wrap
+  background: url(images/app/debut_dark.png)
+  border: 1px solid black
+  overflow-y: auto
+  overflow-x: hidden
+  height: 100% !important
+  width: 100%
+
+  &.picture-wrap
+    display: table
+
+  .picture-container
+    display: table-cell
+    vertical-align: middle
+    width: 100%
+    height: 100%
+    text-align: center
+    padding-bottom: 20px
+
+  .picture-container-2
+    overflow-y: auto
+
+  iframe
+    border: 0
+    width: 100% !important
+    height: 99.5% !important
+
 #chlk-dialogs
   //position: absolute
   width: 0
@@ -64,3 +91,18 @@
   bottom: 0
   z-index: 999
   background: transparentize(#2f7790, .2)
+
+.x-close-btn
+  background: #000 url(images/ui/white-close-btn.png) center center no-repeat
+  display: inline-block
+  width: 24px
+  height: 24px
+  float: right
+  cursor: pointer
+
+  &.absolute
+    top: -24px
+    right: 0
+
+  &:hover
+    opacity: 0.8
