fixed suggested apps

--- a/Chalkable.Web/assets/jade/activities/apps/SuggestedAppsList.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/SuggestedAppsList.jade
@@ -5,18 +5,12 @@
         .suggested-apps-conteiner
             each app in self.getSuggestedApps()
                 div.app-icon-link
-                    if app.needToInstall()
-                        +ActionLink('appmarket', 'tryToQuickInstall', app.getId(), self.getClassId(), self.getAnnouncementId()).app-link
-                            .app-list-item
-                                div(data-tooltip='').icon
-                                    pictureUrl = self.getAppPictureURL(app.getBigPictureId(), 170, 110)
-                                img(src=pictureUrl)
-                    else
-                        +ActionLink('apps', 'tryToAttach', self.getAnnouncementId(), app.getId().valueOf()).app-link
-                            .app-list-item
-                                div(data-tooltip='Attach').attach-icon
-                                div(data-tooltip='').icon
-                                    pictureUrl = self.getAppPictureURL(app.getBigPictureId(), 170, 110)
-                                img(src=pictureUrl)
+                    +ActionLink('apps', 'openSuggestedApp', app.getId(), self.getClassId(), self.getAnnouncementId()).app-link
+                        .app-list-item
+                        if app.needToInstall()
+                            div(data-tooltip='Attach').attach-icon
+                        div(data-tooltip='').icon
+                            pictureUrl = self.getAppPictureURL(app.getBigPictureId(), 170, 110)
+                        img(src=pictureUrl)
     else
         .title No recomended apps
