updated Welcome page

--- a/Chalkable.Web/assets/sass2/teacher.sass
+++ b/Chalkable.Web/assets/sass2/teacher.sass
@@ -18,5 +18,6 @@
 @import "4_pages/class-disciplines-page"
 @import "4_pages/final-grades-page"
 @import "4_pages/profile-page"
+@import "4_pages/setup"
 
 @import "5_dialogs/add-standards-dialog"
