--- a/Chalkable.Web/assets/jade/activities/setup/Hello.jade
+++ b/Chalkable.Web/assets/jade/activities/setup/Hello.jade
@@ -9,18 +9,21 @@
     +ActionForm('setup', 'infoEdit').no-working#hello-form
         +Hidden("id", self.getId())
         .x-form-field
-            label(for="salutation") Name:
-            input(type="text",name="displayname",value=self.getDisplayName(),readonly)
-        .x-form-field
             label(for="email") Email:
+            br
             input(type="text",name="email",class="validate[required,custom[email]] email",value=self.getEmail())
             .form-ok
         .x-form-field
-            label(for="password") Password:
-            input(type="text",name="password",value='Your iNow password', readonly).password
+            label(for="salutation") Name:
+            br
+            input(type="text",name="displayname",value=self.getDisplayName(),readonly)
         .x-form-field
+            label(for="password") Password:
+            br
+            input(type="text",name="password",value='Your iNow password', readonly).password
+        .x-form-field.buttons
             label
-            BUTTON(type="submit").content-box.small.blue-button#confirm-button=Msg.Confirm
-            +ActionLink('feed', 'doToList').small.grey-button=Msg.Skip
+            BUTTON(type="submit").content-box.blue-button#confirm-button=Msg.Confirm
+            +ActionButton('feed', 'doToList')=Msg.Skip
 
 
