--- a/Chalkable.Web/assets/sass2/4_pages/_profile-page.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_profile-page.sass
@@ -70,3 +70,28 @@
       &.late
         background: #f3f006
         border-color: #f3f006
+
+.info-view, .info-edit
+  h3
+    font-size: 22px
+    margin-top: 43px
+
+  .section-data
+    >DIV
+      display: inline-block
+      font-size: 18px
+
+    .info-title
+      font-weight: bold
+      color: #3f7d96
+      margin-right: 16px
+      position: relative
+
+      &::before
+        position: absolute
+        content: ':'
+        right: -6px
+
+
+
+
