--- a/Chalkable.Web/assets/jade/activities/profile/InfoView.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/InfoView.jade
@@ -1,4 +1,3 @@
-addresses = self.getAddresses() || [];
 primaryPhone = self.getPrimaryPhone() ? self.getPrimaryPhone().getValue() : '';
 homePhone = self.getHomePhone() ? self.getHomePhone().getValue() : '';
 controller = self.getRole().getNameLowered() + 's';
@@ -27,32 +26,33 @@ mixin ProfileInfoView(model)
                 h1.display-name(data-tooltip=displayName, data-tooltip-type="overflow")=displayName
 
         .sections
-            .sections-info
-                .section-title.pacifico=model.getRole().getName()
-                div
+            .close-open-control.today-work-panel
+                h3=Msg.Student_info
+                .sections-info
                     .section-data
                         .info-title=Msg.Email
-                        .data-info.low-font-size
-                            input(type="text", value=model.getEmail())
+                        .data-info
+                            input(type="text", value=model.getEmail(), readonly)
                     .section-data
                         .info-title=Msg.Cell
-                        .data-info.big-font-size=primaryPhone
+                        .data-info
+                            input(type="text", value=primaryPhone, readonly)
                     .section-data
                         .info-title=Msg.Birthday
-                        .data-info.low-font-size=model.getBirthDateText()
-                    .section-data.gender-box
-                        div(class=model.getGender() ? model.getGender().toLowerCase() : '').gender-img-box
-                        p=model.getGenderFullText()
-            .sections-info
-                .section-title.pacifico=Msg.Home
-                div
+                        .data-info
+                            input(type="text", value=model.getBirthDateText(), readonly)
+
+            .close-open-control.today-work-panel
+                h3=Msg.Home_info
+                .sections-info
                     .section-data
                         .info-title=Msg.Home_Phone
-                        .data-info.big-font-size=homePhone
+                        .data-info
+                            input(type="text", value=homePhone, readonly)
                     .section-data
-                        .info-title=Msg.Home_Address
-                        each address in addresses
-                            .data-info.low-font-size=address.getValue()
+                        .info-title=Msg.Address
+                        .data-info
+                            input(type="text", value=model.getAddress().getValue(), readonly)
             block
         //.sections-info.other-section
             .section-title.pacifico=Msg.Other(true)
