--- a/Chalkable.Web/assets/jade/activities/profile/student-info-page.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/student-info-page.jade
@@ -1,5 +1,5 @@
 .profile-page.view-mode
-    h2.page-title=Msg.Profile
+    h2.page-title=Msg.Student_profile
     +ProfileTopBar(self, 'info')
     +ProfileInfoView(self.getUser())
         //todo parent section
